Decimotercer Commit: Agregando página confirmar pedido, solución de errores

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,12 @@ body {
   gap: 10px;
 }
 
+.logo-titulo img {
+  height: 48px;        
+  width: auto;         
+  object-fit: contain; 
+}
+
 .logo {
   height: 48px;
 }
